--- a/ShakeMate/app/src/main/res/values/colors.xml
+++ b/ShakeMate/app/src/main/res/values/colors.xml
@@ -4,6 +4,8 @@
     <color name="white">#FFFFFFFF</color>
     <color name="purple">#3D1D72</color>
     <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_500">#3f51b5</color>
     <color name="purple_700">#FF3700B3</color>
+    <color name="search_bar_color">#bdbdbd</color>
+
 </resources>
